# qwerty

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/: CMakeLists.txt
task4/examples/: CMakeLists.txt
task4/include/: Tree.h
task4/src/00-aplusb/: CMakeLists.txt  Foo.cpp
task4/src/02-tree/: CMakeLists.txt  Tree.cpp
task4/src/03-weather/: CMakeLists.txt
task4/tests/00-aplusb/: CMakeLists.txt  test.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h  LeapTestCase.cpp
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task5/cmake-with-flask/: Dockerfile  ]
